# py-run-parallel

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_run_parallel/: __init__.py
tests/: test_import.py
