[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-run-parallel"
version = "0.1.4"
description = "Run multiple functions in parallel and collect results with the simplest possible API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["parallel", "concurrent", "threads", "async", "map"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-run-parallel#readme"
Repository = "https://github.com/philiprehberger/py-run-parallel"
Issues = "https://github.com/philiprehberger/py-run-parallel/issues"
Changelog = "https://github.com/philiprehberger/py-run-parallel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_run_parallel"]
